platform-gitops/clusters/_base/addon-config/policies/kyverno/require-read-only-root-filesystem.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-read-only-root-filesystem
  annotations:
    policies.kyverno.io/title: Require read-only root filesystem
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-read-only-root-filesystem
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - aks-command
                - kube-system
                - flux-system
                - cert-manager
                - external-dns
                - external-secrets
                - kyverno
                - azureserviceoperator-system
                - keda
                - ingress-nginx
                - ingress-nginx-public
                - observability
      validate:
        message: Containers must set securityContext.readOnlyRootFilesystem to true.
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
